--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "author": "Mike Eling",
   "private": true,
   "dependencies": {
-    "material-ui": "^1.0.0-beta.41",
+    "@material-ui/core": "^3.6.2",
+    "@material-ui/icons": "^3.0.1",
+    "prop-types": "^15.6.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-slideshow-image": "^1.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
